chsnge for process.env

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT=http://localhost:5000
+PORT=5000
 MongoDB_URL=mongodb+srv://Devendra1997kumar:RJansm83UKsSGSZT@cluster0.es8qtfh.mongodb.net/HotelBooking?retryWrites=true&w=majority
