--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-date-range": "^2.0.0-alpha.4",
